# sdl-intro

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.web  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  macos.yml  pages.yml
cmake/: Dependencies.cmake  ProjectSanitizers.cmake  ProjectWarnings.cmake
cmake/toolchains/: mingw-w64-x86_64.cmake
docs/: development.md
src/: main.cpp
web/: shell.html
